# 401k-pretax-vs-roth

./: .gitignore  .pre-commit-config.yml  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: analysis.py  charts.py  main.py  ui.py
scripts/: 401k_vs_roth_analysis.ipynb  401k_vs_roth_comprehensive_analysis.ipynb  README.md  diminishing_returns.ipynb
tests/: test_analysis.py  test_charts.py  test_main_integration.py  test_starting_balances.py  test_ui.py
